# hpaslt

./: .gitattributes  .gitattributes.new  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/common/: signal_generator_benchmark.cpp
benchmarks/core/: signal_generator_benchmark.cpp
src/: main.cpp
src/commands/: commands.cpp  commands.h
src/common/: workspace_context.cpp  workspace_context.h
src/common/signal_generator/: signal_generator.cpp  signal_generator.h
src/core/audio_object/: audio_object.cpp  audio_object.h
src/core/audio_player/: audio_player.cpp  audio_player.h
src/core/audio_spectrogram/: audio_spectrogram.cpp  audio_spectrogram.h
src/core/audio_workspace/: audio_workspace.cpp  audio_workspace.h
src/core/signal_generator/: signal_generator.cpp  signal_generator.h
src/core/spectrogram_generator/: spectrogram_generator.cpp  spectrogram_generator.h
src/frontend/: frontend.cpp  frontend.h
src/frontend/common/: tooltip.h
src/frontend/console/: console.cpp  console.h
src/frontend/imgui_example/: imgui_example.cpp  imgui_example.h
src/frontend/main_menu/: main_menu.cpp  main_menu.h
src/frontend/menu/: main_menu.cpp  main_menu.h
src/frontend/play_control/: play_control.cpp  play_control.h
src/frontend/project_settings/: project_settings.cpp  project_settings.h
src/frontend/spectrogram_window/: spectrogram_window.cpp  spectrogram_window.h
src/frontend/status_bar/: status_bar.cpp  status_bar.h
src/frontend/waveform_window/: waveform_window.cpp  waveform_window.h
src/logger/: logger.cpp  logger.h
src/serialization/: config.cpp  config.h
src/serialization/main_menu/: main_menu_config.cpp  main_menu_config.h
src/serialization/project_settings/: project_settings_config.cpp  project_settings_config.h
src/window_manager/: common.cpp  common.h  imgui_object.h  window_mgr.cpp  window_mgr.h
tests/common/: signal_generator_test.cpp
tests/core/: audio_spectrogram_test.cpp  signal_generator_test.cpp
